Show time remaining when downloading updates.